--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hono": "^4.10.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.4",
     "@cloudflare/vite-plugin": "^1.2.3",
     "vite": "^6.3.5",
     "vite-ssr-components": "^0.5.1",
