`npx biome check --write`

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -25,9 +25,9 @@
       "binding": "db",
       "database_name": "rust-reading-group-nfc-redirects-db",
       "database_id": "dc90cd88-20e0-47b7-b500-3ff8f03dcdde",
-      "migrations_dir": "./drizzle/",
-    },
-  ],
+      "migrations_dir": "./drizzle/"
+    }
+  ]
   // "ai": {
   //   "binding": "AI"
   // },
