--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -33,11 +33,18 @@
   // },
 
   "observability": {
+    "enabled": false,
+    "head_sampling_rate": 1,
     "logs": {
-      "enabled": false,
+      "enabled": true,
       "head_sampling_rate": 1,
-      "invocation_logs": true,
       "persist": true,
+      "invocation_logs": true,
+    },
+    "traces": {
+      "enabled": false,
+      "persist": true,
+      "head_sampling_rate": 1,
     },
   },
 }
