--- a/.github/workflows/cargo-fmt.yml
+++ b/.github/workflows/cargo-fmt.yml
@@ -1,9 +1,9 @@
-name: test suite
+name: Check Formatting of Rust Code
 on: [push, pull_request]
 
 jobs:
   test:
-    name: cargo test
+    name: cargo fmt --check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
